Improved the Readme and edited windows build part in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,11 @@ if (WIN32)
         PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<BOOL:${ARCH_64BITS}>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:DoublePendulum>
         VERBATIM
     )
+
+    add_custom_command(
+        TARGET DoublePendulum
+        COMMENT "Copy SFML DLL"
+        POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_BUILD_DIR}/lib/*.dll $<TARGET_FILE_DIR:DoublePendulum>
+        VERBATIM
+    )
 endif()
