Modified CMakeLists.txt to use git submodules instead of FetchContent and modified the structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,46 @@
 cmake_minimum_required(VERSION 3.21.0)
-project(DoublePendulum VERSION 0.1.0 LANGUAGES CXX)
-set(CMAKE_CXX_STANDARD 20)
 
-include(FetchContent)
-FetchContent_Declare(
-    SFML
-    GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 2.6.x
-)
+# set output filename here
+set(NAME_TARGET DoublePendulum)
+project(${NAME_TARGET} LANGUAGES CXX)
+# ----------------------------
 
-FetchContent_MakeAvailable(SFML)
+# set all project files here
+set(FILES_TARGET src/main.cpp src/App/App.cpp src/DoublePendulum/DPendulum.cpp)
+add_executable(${NAME_TARGET} ${FILES_TARGET})
+# ----------------------------
 
-add_executable(DoublePendulum "src/main.cpp" "src/App/App.cpp" "src/DoublePendulum/DPendulum.cpp")
-target_link_libraries(DoublePendulum PRIVATE sfml-graphics sfml-window sfml-system)
+### -fsanitize=.. needs to be passed both in compilation and linking stage
+# enable/disable sanitizer here
+set(ENABLE_UB_SANITIZER OFF)
+# ----------------------------
 
-if (WIN32) 
-    add_custom_command(
-        TARGET DoublePendulum
-        COMMENT "Copy OpenAL DLL"
-        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<BOOL:${ARCH_64BITS}>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:DoublePendulum>
-        VERBATIM
-    )
+# set compiler options here
+set(COMPILE_OPTIONS -std=c++20 -Wall -Wextra -Wconversion -Wshadow -Wpedantic $<$<BOOL:${ENABLE_UB_SANITIZER}>:-fsanitize=undefined -fsanitize=address> -save-temps)
+target_compile_options(${NAME_TARGET} PRIVATE ${COMPILE_OPTIONS})
+# ----------------------------
 
-    add_custom_command(
-        TARGET DoublePendulum
-        COMMENT "Copy SFML DLL"
-        POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_BUILD_DIR}/lib/*.dll $<TARGET_FILE_DIR:DoublePendulum>
-        VERBATIM
-    )
-endif()
+# set linker options here
+set(LINK_OPTIONS_TARGET $<$<BOOL:${ENABLE_UB_SANITIZER}>:-fsanitize=undefined -fsanitize=address>)
+target_link_options(${NAME_TARGET} PRIVATE ${LINK_OPTIONS_TARGET})
+# ----------------------------
+
+set(SFML_BUILD_AUDIO OFF)
+set(SFML_BUILD_NETWORK OFF)
+add_subdirectory(submodules/SFML SFML/build/)
+
+
+# set lib files here
+set(LIB_FILES sfml-graphics sfml-window sfml-system)
+target_link_libraries(${NAME_TARGET} ${LIB_FILES})
+# ----------------------------
+
+# # set include path here
+# set(INCLUDE_PATH_TARGET "${CMAKE_SOURCE_DIR}/include")
+# target_include_directories(${NAME_TARGET} PRIVATE ${INCLUDE_PATH_TARGET})
+# # ----------------------------
+
+# # set lib path here
+# set(LIB_PATH_TARGET "${CMAKE_SOURCE_DIR}/lib")
+# target_link_directories(${NAME_TARGET} PRIVATE ${LIB_PATH_TARGET})
+# # ----------------------------
