--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = submodules/SFML
 	url = https://github.com/SFML/SFML.git
 	branch = 2.6.x
+[submodule "submodules/ImGui-SFML"]
+	path = submodules/ImGui-SFML
+	url = https://github.com/SFML/imgui-sfml
+	branch = 2.6.x
