--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = submodules/ImGui-SFML
 	url = https://github.com/SFML/imgui-sfml
 	branch = 2.6.x
+[submodule "submodules/ImGui"]
+	path = submodules/ImGui
+	url = https://github.com/ocornut/imgui.git
