--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -26,7 +26,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install ninja-build tool
-      uses: seanmiddleditch/gha-setup-ninja@v4      
+      uses: seanmiddleditch/gha-setup-ninja@v4
+
+    - name: Init submodules
+      run: git submodule update --init --recursive
     
     - name: Configure CMake
       run: cmake -S ${{ github.workspace }} --preset=release
