Modified CMakeLists.txt to package the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,14 @@ set(CPACK_PACKAGE_NAME ${NAME_TARGET})
 set(CPACK_PACKAGE_VERSION ${VERSION_TARGET})
 set(CPACK_PACKAGE_CONTACT "roughero2@gmail.com")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Double Pendulum Simulation")
-set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
-set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-source")
+# Use the OS name for the package file name
+if(DEFINED ENV{RUNNER_OS})
+    string(TOLOWER "$ENV{RUNNER_OS}" OS_NAME)
+    set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${OS_NAME}")
+else()
+    set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
+endif()
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-Source")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 
