Modified CMakeLists.txt to package the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,11 +57,16 @@ set(CPACK_PACKAGE_VERSION ${VERSION_TARGET})
 set(CPACK_PACKAGE_CONTACT "roughero2@gmail.com")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Double Pendulum Simulation")
 # Use the OS name for the package file name
+if(BUILD_SHARED_LIBS)
+    set(BUILD_TYPE "shared")
+else()
+    set(BUILD_TYPE "static")
+endif()
 if(DEFINED ENV{RUNNER_OS})
     string(TOLOWER "$ENV{RUNNER_OS}" OS_NAME)
-    set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${OS_NAME}")
+    set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${OS_NAME}-${BUILD_TYPE}")
 else()
-    set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
+    set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-{BUILD_TYPE}")
 endif()
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-Source")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
